
TODO:



2017.8.19	K.L.	<k.l.lambda@gmail.com>

	+	MeshBuilder: added inverse faces.

	*	key00 indices:
			1,2,7,6
			3,4,9,8
			27,32,33,29
			28,31,30,26
			22,20,38,36
			37,39,21,23
			24,34,35,25
			11,0,5,13
			14,1,0,11
			13,5,6,15
			18,16,1,14
			15,6,17,19
			1,1,0,0
			5,5,6,6
			0,1,6,5
			10,38,16,18
			19,17,39,12
			36,10,34,24
			25,35,12,37
			38,20,2,1
			38,1,16,38
			39,6,7,21
			17,6,39,17
			31,4,3,30
			32,8,9,33


2017.8.18	K.L.	<k.l.lambda@gmail.com>

	>	MeshBuilderEditor: keep guid when export mesh.


2017.8.16	K.L.	<k.l.lambda@gmail.com>

	+	MeshBuilderEditor: set the default name when empty.

	+	MeshBuilderEditor: highlight chosen pointer.

	+	MeshBuilder: added normal gizmo length config.

	+	MeshBuilder: added preview color config.

	+	Mesh of key_b added.
	+	Mesh of key0 added.


2017.8.15	K.L.	<k.l.lambda@gmail.com>

	+	MeshBuilder: import mesh implemented.

	+	MeshBuilder: register undo data when inspector changed.


2017.8.14	K.L.	<k.l.lambda@gmail.com>

	+	MeshBuilder: preview mesh shader added.

	+	MeshBuilder: loadPointers added.

	+	MeshBuilder: added normal inspector.

	+	MeshBuilder: added indices lines parse.

	+	MeshBuilderEditor.cs: draw mesh gizmo.

	+	MeshBuilder.cs: export mesh implemented.


2017.8.13	K.L.	<k.l.lambda@gmail.com>

	+	MeshBuilder.cs: added Face.

	+	MeshBuilderEditor.cs: draw gizmos for pointers.


2017.8.12	K.L.	<k.l.lambda@gmail.com>

	+	MeshBuilderEditor.cs: export mesh added.

	>	HandSkeleton.cs: fixed eular axis order.

	+	MeshBuilderEditor.cs: created.
	+	MeshBuilder.cs: created.


2017.8.11	K.L.	<k.l.lambda@gmail.com>

	>	HandControllerEditor.cs: limit gear range by rig data.


2017.8.10	K.L.	<k.l.lambda@gmail.com>

	+	HandControllerEditor.cs: display gears.

	+	HandController.cs: Gear implemented.

	+	HandControllerEditor.cs: created.

	*	Static posture solution: