@@ -1,0 +1,12 @@
+fileFormatVersion: 2
+guid: fe1ca0cde67311f47b590b2a6c356b46
+timeCreated: 1503150012
+licenseType: Free
+MonoImporter:
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
