@@ -684,6 +684,7 @@ GameObject:
   m_Component:
   - 4: {fileID: 409472}
   - 114: {fileID: 11498882}
+  - 114: {fileID: 11400640}
   m_Layer: 0
   m_Name: key1
   m_TagString: Untagged
@@ -816,7 +817,7 @@ Transform:
   m_PrefabInternal: {fileID: 100100000}
   m_GameObject: {fileID: 177602}
   m_LocalRotation: {x: 0, y: 0.7071068, z: 0, w: 0.7071067}
-  m_LocalPosition: {x: 1, y: 0, z: 18.75}
+  m_LocalPosition: {x: 0.485, y: 0, z: 18.75}
   m_LocalScale: {x: 1, y: 1, z: 1}
   m_LocalEulerAnglesHint: {x: 0, y: 90, z: 0}
   m_Children: []
@@ -842,7 +843,7 @@ Transform:
   m_PrefabInternal: {fileID: 100100000}
   m_GameObject: {fileID: 190160}
   m_LocalRotation: {x: 0, y: 0.7071068, z: 0, w: 0.7071067}
-  m_LocalPosition: {x: 0.995, y: -4, z: 18.75}
+  m_LocalPosition: {x: 0.48, y: -4, z: 18.75}
   m_LocalScale: {x: 1, y: 1, z: 1}
   m_LocalEulerAnglesHint: {x: 0, y: 90, z: 0}
   m_Children: []
@@ -1375,7 +1376,7 @@ Transform:
   m_PrefabInternal: {fileID: 100100000}
   m_GameObject: {fileID: 156926}
   m_LocalRotation: {x: -0.7071068, y: 0, z: 0, w: 0.7071067}
-  m_LocalPosition: {x: 0.995, y: 0, z: 18.75}
+  m_LocalPosition: {x: 0.48, y: 0, z: 18.75}
   m_LocalScale: {x: 1, y: 1, z: 1}
   m_LocalEulerAnglesHint: {x: -89.980194, y: 0, z: 0}
   m_Children: []
@@ -1537,6 +1538,21 @@ Transform:
   m_Children: []
   m_Father: {fileID: 409472}
   m_RootOrder: 37
+--- !u!114 &11400640
+MonoBehaviour:
+  m_ObjectHideFlags: 1
+  m_PrefabParentObject: {fileID: 0}
+  m_PrefabInternal: {fileID: 100100000}
+  m_GameObject: {fileID: 183438}
+  m_Enabled: 1
+  m_EditorHideFlags: 0
+  m_Script: {fileID: 11500000, guid: 5ce9cf41b2395cc4f9723e35e38d308f, type: 3}
+  m_Name: 
+  m_EditorClassIdentifier: 
+  CriterionOutXIndex: 20
+  CriterionInnerXIndex: 41
+  HollowIndices: 290000002b0000002e0000002d0000002f000000070000001500000017000000
+  TailIndices: 03000000080000001e000000200000001a0000001b0000001c0000001d00000004000000090000001f00000021000000
 --- !u!114 &11498882
 MonoBehaviour:
   m_ObjectHideFlags: 1
@@ -1552,7 +1568,7 @@ MonoBehaviour:
   PreviewMaterialDim: {fileID: 0}
   Faces:
   - topology: 2
-    indicesSource: "1,41,40,6\n1,2,7,41\n3,4,9,8\n27,32,33,29\n28,31,30,26\n22,20,38,36\n37,39,42,44\n24,34,35,25\n11,0,5,13\r\n14,1,0,11\r\n13,5,6,15\r\n18,16,1,14\r\n15,6,17,19\r\n0,1,6,5\n10,38,16,18\n19,17,39,12\n36,10,34,24\n25,35,12,37\n38,20,2,1\n38,1,16,38\n39,6,40,42\n17,6,39,17\n31,4,3,30\n32,8,9,33\n47,46,21,23\n46,41,7,21\n43,41,46,43\n49,48,43,45\n44,42,48,49\n45,43,46,47\n42,40,48,42\n48,40,41,43"
+    indicesSource: "1,41,40,6\n1,2,7,41\n3,4,9,8\n27,32,33,29\n28,31,30,26\n22,20,38,36\n37,39,42,44\n24,34,35,25\n11,0,5,13\r\n14,1,0,11\r\n13,5,6,15\r\n18,16,1,14\r\n15,6,17,19\r\n0,1,6,5\n10,38,16,18\n19,17,39,12\n36,10,34,24\n25,35,12,37\n38,20,2,1\n38,1,16,38\n39,6,40,42\n17,6,39,17\n31,4,3,30\n32,8,9,33\n47,46,21,23\n46,41,7,21\n43,41,46,43\n49,48,43,45\n44,42,48,49\n45,43,46,47\n42,40,48,42\n48,40,41,43\n"
   Name: key1
   AssetFolder: Assets/Resources/Meshes/
 --- !u!1001 &100100000
