@@ -1,0 +1,12 @@
+fileFormatVersion: 2
+guid: 5ce9cf41b2395cc4f9723e35e38d308f
+timeCreated: 1503149871
+licenseType: Free
+MonoImporter:
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
