@@ -114,6 +114,7 @@
     <Compile Include="Assets\Editor\HandControllerEditor.cs" />
     <Compile Include="Assets\Editor\HandRigDrawer.cs" />
     <Compile Include="Assets\Editor\HandRigEditor.cs" />
+    <Compile Include="Assets\Editor\KeyModifierEditor.cs" />
     <Compile Include="Assets\Editor\MeshBuilderEditor.cs" />
   </ItemGroup>
   <ItemGroup>
